@@ -60,6 +60,8 @@ Version 1.11.0+svn:
    * Ambush now works for desert palms and dead great trees (bug #20207)
    * Hex field size and default terrain are wml configurable
    * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
+   * Fixed a bug disallowing the left shift and meta key to be detected in
+     the hotkeys
 
 Version 1.11.0:
  * Add-ons client:
